--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,27 @@
+html,
 body {
   margin: 0;
-  padding: 8px;
+  height: 100%;
+	min-height: 100%;
+}
+
+#content {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+	min-height: 100%;
+}
+
+#header {
+  flex: 0 1 auto;
 }
 
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #ff3c00;
-  height: 98%;
-  width: 98%;
-  margin: auto;
+  flex: 1 1 auto;
+  min-height: 0;
 }
 
 .window-controls {
